# windows-monitor-system

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  compose-windows.yml  compose.yml  elastic-stack.Dockerfile  vscode.json
.github/workflows/: benchmark.yml  build.yml  lint.yml
cert/: client.pfx  server.pem  server.rsa  server.srl
config/: ecs-template.json  elasticsearch-certutil.txt  elasticsearch.yml
mock-client/: Cargo.toml
mock-client/src/: cli.rs  generator.rs  main.rs
mock-events/: Cargo.toml
mock-events/src/: main.rs
mock-provider/: Cargo.toml
mock-provider/src/: cli.rs  main.rs
scripts/: benchmark.py  data-collector.bat  events.bat  key.bat  package.iss  setup.bat  vm-setup.bat
services/elastic/: Dockerfile  ecs-template.json  kibana.yml
services/rabbitmq/: Dockerfile  rabbitmq.conf
services/rabbitmq-proxy/: Dockerfile  haproxy.conf
utility/: Cargo.toml  build.rs
utility/src/: cli.rs  main.rs
wm-api-service/: Cargo.toml
wm-api-service/deploy/: api-service-config.yml
wm-api-service/src/: app.rs  cli.rs  configuration.rs  lib.rs  main.rs  utils.rs
wm-api-service/src/routes/: backup.rs  trace.rs
wm-client/: Cargo.toml  build.rs
wm-client/deploy/: client-config.yml
wm-client/src/: agent.rs  authenticator.rs  backup.rs  cli.rs  configuration.rs  http.rs  lib.rs  main.rs  runner.rs
wm-client/src/module/: backup.rs  connector.rs  mod.rs  scanner.rs
wm-client/src/module/tracer/: data.rs  enricher.rs  mod.rs
wm-client/src/module/tracer/providers/: file.rs  image.rs  mock.rs  mod.rs  process.rs  registry.rs  tcpip.rs  udpip.rs
wm-client/src/module/tracer/providers/kernel/: file.rs  image.rs  mod.rs  udpip.rs
wm-client/src/module/tracer/providers/user/: file.rs
wm-common/: Cargo.toml
wm-common/src/: credential.rs  error.rs  file.rs  job.rs  lib.rs  logger.rs  once_cell_no_retry.rs  pool.rs  ptr_guard.rs  registry.rs  schema.rs  sysinfo.rs  utils.rs
wm-common/src/module/: mod.rs
wm-common/src/module/tracer/: data.rs  mod.rs
wm-common/src/module/tracer/providers/: file.rs  image.rs  mod.rs  process.rs  tcpip.rs  udpip.rs
wm-common/src/schema/: ecs_converter.rs  event.rs  github.rs  mod.rs  responses.rs  sysinfo.rs
wm-common/src/service/: mod.rs  service_manager.rs  status.rs  status_process.rs
wm-data-service/: Cargo.toml  build.rs
wm-data-service/deploy/: data-service-config.yml
wm-data-service/src/: app.rs  cli.rs  configuration.rs  elastic.rs  forwarder.rs  lib.rs  main.rs  rules.rs
wm-generated/: Cargo.toml  build.rs
wm-generated/src/: ecs.rs
wm-server/: Cargo.toml  Dockerfile  build.rs
wm-server/deploy/: config.yml  server-config.yml
wm-server/src/: app.rs  cli.rs  configuration.rs  elastic.rs  eps.rs  lib.rs  main.rs  responses.rs  rules.rs  utils.rs  verifier.rs
wm-server/src/indices/: ecs-template.json  original-template.json  users.json
wm-server/src/models/: tokens.rs  users.rs
wm-server/src/routes/: abc.rs  backup.rs  count.rs  health_check.rs  login.rs  mod.rs  trace.rs
