[workspace]
resolver = "2"
members = ["mock-provider", "wm-client", "wm-common", "wm-generated", "wm-server"]

[workspace.dependencies]
async-compression = { version = "^0.4.27", features = ["tokio", "zstd"] }
async-trait = "^0.1.88"
chrono = { version = "^0.4.42", features = ["serde"] }
clap = { version = "^4.5.48", features = ["cargo", "derive"] }
config-file = { version = "^0.2.3", features = ["yaml"] }
ferrisetw = "^1.2.0"
log = "^0.4.27"
reqwest = { version = "^0.12.23", features = ["json", "multipart", "native-tls", "stream"] }
serde = { version = "^1.0.219", features = ["derive", "rc"] }
serde_json = "^1.0.142"
tokio = { version = "^1.47.1", features = ["full"] }
url = { version = "^2.5.4", features = ["serde"] }
windows = { version = "^0.60.0", features = [
        "Win32",
        "Win32_Security_Credentials",
        "Win32_System",
        "Win32_System_Diagnostics",
        "Win32_System_Diagnostics_Etw",
        "Win32_System_JobObjects",
        "Win32_System_Services",
        "Win32_System_SystemInformation",
        "Win32_System_Threading",
        "Win32_System_WindowsProgramming",
        "Win32_UI",
        "Win32_UI_Shell"
    ] }

[workspace.lints.clippy]
absolute_paths = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
too_many_arguments = "allow"
trait_duplication_in_bounds = "warn"
use_self = "warn"
wildcard_imports = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
