[workspace]
resolver = "2"
members = ["utility", "wm-api-service", "wm-client", "wm-common", "wm-data-service", "wm-generated"]

[workspace.dependencies]
async-compression = { version = "^0.4.30", features = ["tokio", "zstd"] }
async-trait = "^0.1.88"
chrono = { version = "^0.4.41", features = ["serde"] }
clap = { version = "^4.5.48", features = ["cargo", "derive"] }
config-file = { version = "^0.2.3", features = ["yaml"] }
fancy-regex = "^0.16.1"
ferrisetw = "^1.2.0"
lapin = "^3.7.0"
log = "^0.4.27"
mimalloc = "^0.1.48"
reqwest = { version = "^0.12.23", features = ["json", "multipart", "native-tls", "stream"] }
rpassword = "^7.4.0"
serde = { version = "^1.0.219", features = ["derive", "rc"] }
serde_json = "^1.0.142"
tokio = { version = "^1.47.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-executor-trait = "^3.1.0"
url = { version = "^2.5.4", features = ["serde"] }
windows = { version = "^0.61.3", features = [
        "Wdk_Storage_FileSystem",
        "Win32_Foundation",
        "Win32_Security_Authorization",
        "Win32_Security_Credentials",
        "Win32_Storage_FileSystem",
        "Win32_System_Diagnostics_Etw",
        "Win32_System_JobObjects",
        "Win32_System_Registry",
        "Win32_System_Services",
        "Win32_System_SystemInformation",
        "Win32_System_SystemServices",
        "Win32_System_Threading",
        "Win32_System_WindowsProgramming",
        "Win32_UI_Shell"
    ] }

[workspace.lints.clippy]
absolute_paths = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
too_many_arguments = "allow"
trait_duplication_in_bounds = "warn"
use_self = "warn"
wildcard_imports = "warn"

[profile.release]
codegen-units = 1
debug = 0
lto = "thin"
opt-level = 3
overflow-checks = false
strip = true
