[package]
name = "utility"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = "Windows Monitor development utilities"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
async-compression = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wm-common = { path = "../wm-common" }

[lints]
workspace = true
