[package]
name = "wm-client"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = "Windows Monitor client component"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
async-compression = { workspace = true }
async-trait = { workspace = true }
bytes = "^1.10.1"
chrono = { workspace = true }
clap = { version = "^4.5.42", features = ["cargo", "derive"] }
config-file = { workspace = true }
ferrisetw = { workspace = true }
log = { workspace = true }
reqwest = { version = "^0.12.23", features = ["json", "native-tls", "stream"] }
rpassword = "^7.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
windows = { workspace = true }
windows-service-detector = "^0.1.0"
windows-services = "^0.25.0"
wm-common = { path = "../wm-common" }

[lints]
workspace = true
