[package]
name = "wm-client"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = "Windows Monitor client component"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
async-compression = { workspace = true }
async-trait = { workspace = true }
bytes = "^1.10.1"
chrono = { workspace = true }
clap = { workspace = true }
config-file = { workspace = true }
ferrisetw = { workspace = true }
log = { workspace = true }
lru = "^0.16.1"
mimalloc = "^0.1.48"
parking_lot = "^0.12.4"
reqwest = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "^0.37.0"
tokio = { workspace = true }
url = { workspace = true }
windows = { workspace = true }
windows-service-detector = "^0.1.0"
windows-services = "^0.25.0"
wm-common = { path = "../wm-common" }

[lints]
workspace = true
