[package]
name = "wm-common"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
async-trait = { workspace = true }
ferrisetw = "^1.2.0"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "^0.12.2"
sysinfo = "0.37.0"
tokio = { workspace = true }
windows = { version = "^0.60.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Etw", "Win32_System_Services"] }

[lints]
workspace = true
