[package]
name = "wm-common"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
ferrisetw = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "^0.12.2"
sysinfo = "0.37.0"
tokio = { workspace = true }
windows = { workspace = true }

[lints]
workspace = true
