[package]
name = "wm-data-service"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = "Windows Monitor data service"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
clap = { workspace = true }
config-file = { workspace = true }
elasticsearch = "^9.1.0-alpha.1"
fancy-regex = { workspace = true }
futures-lite = "^2.6.1"
lapin = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-executor-trait = { workspace = true }
toml = "^0.9.7"
url = { workspace = true }
wm-common = { path = "../wm-common" }

[lints]
workspace = true
