[package]
name = "wm-server"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = "Windows Monitor server component"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
async-trait = { workspace = true }
config-file = { workspace = true }
elasticsearch = "^9.0.0-alpha.1"
hyper = { version = "^1.6.0", features = ["full"] }
hyper-util = { version = "^0.1.16", features = ["full"] }
http-body-util = "^0.1.3"
log = { workspace = true }
openssl = "^0.10.73"
rand = "^0.9.2"
rustls = "^0.23.31"
rustls-pemfile = "^2.2.0"
rustls-webpki = "^0.103.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "^0.26.2"
url = { workspace = true }
wm-common = { path = "../wm-common" }

[lints]
workspace = true
