[package]
name = "wm-server"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = "Windows Monitor server component"
repository = "https://github.com/Serious-senpai/windows-monitor"
license = "GPL-2.0-or-later"

[dependencies]
async-compression = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config-file = { workspace = true }
elasticsearch = "^9.0.0-alpha.1"
futures-util = "^0.3.31"
http-body-util = "^0.1.3"
hyper = { version = "^1.6.0", features = ["full"] }
hyper-util = { version = "^0.1.16", features = ["full"] }
log = { workspace = true }
openssl = "^0.10.73"
rand = "^0.9.2"
rustls = "^0.23.31"
rustls-pemfile = "^2.2.0"
rustls-webpki = "^0.103.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "^0.26.2"
tokio-util = "^0.7.16"
wm-common = { path = "../wm-common" }
wm-generated = { path = "../wm-generated" }

[lints]
workspace = true
